# signify

./: .readthedocs.yaml  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README  README.md  README.rst  _generate_legacy_certs.py  auth_data.py  fingerprint.py  fingerprinter_test.py  generate_test_data.py  pecoff_blob.py  pyproject.toml  requirements.txt  setup.py  update-ms-bundle.py  validate_signature.py
.github/workflows/: lint.yml  test.yml
asn1/: dn.py  oids.py  pkcs7.py  spc.py  x509.py
docs/: Makefile  authenticode.rst  authenticode_asn1.rst  authenticode_files.rst  authenticode_structures.rst  authroot.rst  certificates.rst  changelog.rst  conf.py  fingerprinter.rst  index.rst  make.bat  pkcs7.rst  requirements.txt  signeddata.rst
examples/: MSI_info.py  authenticode_info.py  raw_cert_parse.py
pesigcheck/: _legacy.py  authenticode.py  authenticode_parser.py  fingerprinter.py  signed_pe.py  signed_pe_parser.py
pesigcheck/asn1/: oids.py  x509.py  x509_time.py
signify/: __init__.py  _compat.py  _typing.py  authenticode.py  authroot.py  certificates.py  context.py  exceptions.py  fingerprinter.py  signed_pe.py  signeddata.py  signerinfo.py
signify/__pyinstaller/: hook-signify.py
signify/asn1/: __init__.py  ctl.py  hashing.py  helpers.py  oids.py  pkcs7.py  preserving_der.py  spc.py  x509.py
signify/authenticode/: __init__.py  authroot.py  cert_store.py  cli.py  indirect_data.py  legacy-certs.pem  raw_cert.py  signed_data.py  signed_file.py  signed_msi.py  signed_pe.py  signer_info.py  structures.py  trust_list.py  tsp.py  verification_result.py
signify/certs/: README.rst  authenticode-bundle.pem  authenticode-legacy.pem  authroot.stl
test_data/: SoftwareUpdate.exe.res  pciide.sys.res  simple.res
tests/: _generate_test_results.py  _utils.py  fingerprint_results.json  requirements.txt  test_asn1.py  test_authenticode.py  test_authenticode_parser.py  test_authroot.py  test_certificate.py  test_context.py  test_fingerprinter.py  test_msi.py  test_signerinfo.py
(+52 files in other folders)
